--- a/public/css/output.css
+++ b/public/css/output.css
@@ -729,6 +729,10 @@ video {
   margin-top: 6rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .block {
   display: block;
 }
@@ -763,6 +767,10 @@ video {
 
 .h-5 {
   height: 1.25rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .min-h-screen {
